--- a/src/runtime/hexagon/rpc/android_bash.sh.template
+++ b/src/runtime/hexagon/rpc/android_bash.sh.template
@@ -17,8 +17,10 @@
 # under the License.
 
 export LD_LIBRARY_PATH=.
-./tvm_rpc_android server --port=<RPC_SERVER_PORT> --tracker=<RPC_TRACKER_HOST>:<RPC_TRACKER_PORT> --key=<HEXAGON_REMOTE_DEVICE_KEY>&
+# We probably don't even need the cleanup scheme if this works.
+./tvm_rpc_android server --port=<RPC_SERVER_PORT> --tracker=<RPC_TRACKER_HOST>:<RPC_TRACKER_PORT> --key=<HEXAGON_REMOTE_DEVICE_KEY> >$(pwd)/tvm_rpc_android.out.txt 2>&1  &
 rpc_pid=$!
 
 rm -f rpc_pid.txt
 echo $rpc_pid >> rpc_pid.txt
+touch "FOO-${rpc_pid}"
