wip: enable faster builds for TVM+Hexagon
NOTE: Needs to be broken into two PRs, one for ccache and one for ninja

TODO: Sort out the specific mechanism that makes ccache work:
-DCMAKE_CXX_COMPILER_LAUNCHER=$(which ccache) vs
-DUSE_CCACHE=ON vs
setting env var CMAKE_CXX_COMPILER_LAUNCHER="$(which ccache)"

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -773,7 +773,8 @@ if(USE_CCACHE) # True for AUTO, ON, /path/to/ccache
     message(STATUS "Setting ccache path to " "${PATH_TO_CCACHE}")
   endif()
   # Set the flag for ccache
-  set(CXX_COMPILER_LAUNCHER PATH_TO_CCACHE)
+  set(CXX_COMPILER_LAUNCHER "${PATH_TO_CCACHE}")
+  #set(CXX_COMPILER_LAUNCHER PATH_TO_CCACHE)
 endif(USE_CCACHE)
 
 find_and_set_linker(${USE_ALTERNATIVE_LINKER})
